--- a/index.css
+++ b/index.css
@@ -42,6 +42,58 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.image-content {
+  row-gap: 5px;
+  position: relative;
+  padding: 25px 0;
+}
 .slide-content {
   margin: 0 40px;
+}
+.name {
+  font-size: 18px;
+  font-weight: 500;
+  color: #333;
+}
+.description {
+  font-size: 14px;
+  color: #707070;
+  text-align: center;
+}
+.button {
+  border: none;
+  font-size: 16px;
+  color: #fff;
+  padding: 8px 16px;
+  background-color: #4070f4;
+  border-radius: 6px;
+  margin: 14px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.button:hover {
+  background: #265df2;
+}
+.overlay {
+  position: absolute;
+  height: 100%; /* width */
+  width: 100%;
+  background-color: #4070f4;
+  left: 0;
+  top: 0;
+  border-radius: 25px 25px 0px 25px;
+}
+.overlay::before,
+.overlay::after {
+  content: "";
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background-color: #4070f4;
+  right: 0;
+  bottom: -40px;
+}
+.overlay::after {
+  border-radius: 0 25px 0 0;
+  background-color: #fff;
 }
